@@ -86,6 +86,23 @@ public class Game {
         return closest;
     }
     /**
+     * @param other the piece who you want to compare
+     * @return the closest alive and not a hero or null
+     */
+    public Useable getTheClosestUsable(List<Lookable> list, Lookable other){
+        double distanceMin = Double.MAX_VALUE;
+        Useable closest = null;
+        for (Lookable useable : list) {
+            if (useable instanceof Useable) {
+                if (useable.getDistance(other) < distanceMin) {
+                    distanceMin = useable.getDistance(other);
+                    closest = (Useable) useable;
+                }
+            }
+        }
+        return closest;
+    }
+    /**
      * all the characters fight againt the HERO or move. The HERO don't attack himself
      * @return true if some hero are alive else false
      */
@@ -143,7 +160,7 @@ public class Game {
     public void addHero(Hero h){
         if(this.NB_HERO == 1 && this.defaultHero){
             this.defaultHero = false;
-            this.location.removeCharacter(this.HEROS.get(0));
+            this.location.removeCharacter(this.HEROS.getFirst());
             this.HEROS.removeFirst();
             this.NB_HERO--;
             this.location = h.getLocation();
